# beauty-kosmetikportal

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  scrapy.cfg
kosmetikportal/: items.py  loaders.py  middlewares.py  pipelines.py  settings.py  utils.py
kosmetikportal/spiders/: overview.py
