[project]
name = "beauty-kosmetikportal"
version = "0.1.0"
description = "Crawlers for the German portal kosmetikportal.net"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "phonenumbers>=9.0.13",
    "scrapy>=2.13.3",
]

[dependency-groups]
pre-commit = [
    "pre-commit>=4.3.0",
]
